	* Incremented the package version to v3.0.0rc0.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke the 'make deb' target.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to v3.0.0rc0a.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'apache2' dependency to the 'davit-web' DEB package.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the login code in davit(1) so any error dialogs appear atop
	the login widget.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'SMTP Server Settings' section from the 'Edit System
	E-Mail Settings' dialog in davit(1).
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Edit Affiliate Data'
	permission to fail to be enforced.
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Schedule Programs'
	permission to fail to be enforced.
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Edit Provider Data''
	permission to fail to be enforced.
2025-08-17 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Migrate Affiliates' dialog in davit(1).
2025-08-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in davit(1) that caused the 'Exception' section to
	fail to be included when generating an affidavit for an affiliate
	with the 'Include Airings List' checkbox unticked in the
	'Generate Affiliate Affidavit' dialog.
2025-08-18 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked layout of the 'Exception' section of affiliate affidavits
	in davit(1).
2025-08-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--email-dry-run' switch to davit(1).
	* Refactored the code for generating affidavit reminder messages in
	davit(1).
2025-08-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed vestigal code for generating progress dialogs in davit(1).