@@ -1,0 +1,58 @@
+/* XPM */
+static const char * blueball_xpm[] = {
+"14 14 41 1",
+" 	c None",
+".	c #8BA6FF",
+"+	c #0500B4",
+"@	c #05004A",
+"#	c #060062",
+"$	c #0F07FF",
+"%	c #040094",
+"&	c #4642CE",
+"*	c #0500AC",
+"=	c #0000FD",
+"-	c #03005A",
+";	c #6462CD",
+">	c #0600DE",
+",	c #131084",
+"'	c #4A4A9C",
+")	c #170FFF",
+"!	c #1210CE",
+"~	c #33308B",
+"{	c #0700EE",
+"]	c #0300D6",
+"^	c #01006A",
+"/	c #010084",
+"(	c #807AC5",
+"_	c #030072",
+":	c #3134FF",
+"<	c #0E08D6",
+"[	c #2721FF",
+"}	c #0600CE",
+"|	c #0800BC",
+"1	c #130FFF",
+"2	c #0700E6",
+"3	c #00004A",
+"4	c #7A7AC5",
+"5	c #0700FD",
+"6	c #00015A",
+"7	c #A5C6FF",
+"8	c #6B62CD",
+"9	c #0200BC",
+"0	c #0F0F72",
+"a	c #07009C",
+"b	c #0600C6",
+"              ",
+"              ",
+"    (&!!&(    ",
+"   8]==5{b8   ",
+"  4}=1:$2ba4  ",
+"  &=$.7)]9%,  ",
+"  !5$:[<9a/-  ",
+"  !>2>}+a/#-  ",
+"  &99|*a/630  ",
+"  4%a%/_#@3'  ",
+"   ;^^-333~   ",
+"    40--0'    ",
+"              ",
+"              "};
